refactor: install vcredist manually

--- a/windows/Dockerfile
+++ b/windows/Dockerfile
@@ -1,8 +1,8 @@
 FROM mcr.microsoft.com/windows/servercore:ltsc2022@sha256:c7c591fe3a010bc641906723ad583ffe2fc14b472de6e6453ea26eaa3689d16e
 
-RUN powershell -Command Set-ExecutionPolicy Bypass -Scope Process -Force; \
-    [System.Net.ServicePointManager]::SecurityProtocol = [System.Net.ServicePointManager]::SecurityProtocol -bor 3072; \
-    iex ((New-Object System.Net.WebClient).DownloadString('https://github.com/EUCPilots/vcredist-docs/raw/refs/heads/main/docs/public/install.ps1'))
+ADD https://aka.ms/vc14/vc_redist.x64.exe vcredist.exe
+
+RUN vcredist.exe /install /quiet /norestart && del vcredist.exe
 
 ADD https://github.com/futrime/lip/releases/latest/download/lip-cli-win-x64-self-contained.zip lip.zip
 
@@ -17,6 +17,7 @@ COPY entrypoint.cmd /Windows/entrypoint.cmd
 WORKDIR /data
 
 ENTRYPOINT ["entrypoint.cmd"]
+
 
 
 
