--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,19 +4,12 @@ on:
   workflow_dispatch:
 
 jobs:
-  build-windows:
-    runs-on: windows-latest
-    steps:
-      - uses: actions/checkout@v4
-
-      - run: |
-          docker build windows
-
   build-wine:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
 
-      - uses: docker/build-push-action@v5
+      - uses: macbre/push-to-ghcr@master
         with:
-          context: wine
+          image_name: ${{ github.repository }}
+          dockerfile: './wine/Dockerfile'
